Added CatalogPage, CatalogList, CatalogItem Components

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <title>ComicsMar</title>
     <meta charset="utf-8">
-    <title>First React App</title>
+    <meta name="description" content="Catalog of comics, marvel, DC, read, buy, books">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <div id="root"></div>
