--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="mask-icon" href="./favicons/safari-pinned-tab.svg" color="#474f51">
     <meta name="msapplication-TileColor" content="#2b5797">
     <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="./shame.css">
   </head>
   <body>
     <div id="root"></div>
