--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <link rel="stylesheet" href="./shame.css">
   </head>
   <body>
-    <div id="root"></div>
+    <div id="app-root"></div>
+    <div id="modal-root"></div>
     <script src="./index.js"></script>
   </body>
 </html>
