--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <body>
     <div id="app-root"></div>
     <div id="modal-root"></div>
+    <div id="alert-root"></div>
     <script src="./index.js"></script>
   </body>
 </html>
